# SerialScope

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
examples/: esp32_example.ino
scripts/: setup.sh
serialscope/: __init__.py  main.py
serialscope/core/: __init__.py  event.py  parser.py  serial_manager.py
serialscope/plugins/: __init__.py  base.py
serialscope/recorder/: __init__.py  session.py
serialscope/ui/: __init__.py  dashboard.py  log_panel.py
tests/: __init__.py
tests/integration/: test_serial_integration.py
tests/unit/: test_event.py  test_parser.py
